# ros2_kinect_arm_project

./: .gitignore  README.md  tree.txt
src/interbotix_xsarm_descriptions/urdf/: camera.sdf  wx200.urdf.xacro
src/kinect_arm_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/kinect_arm_control/description/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL
src/kinect_arm_control/description/urdf/: my_custom_robot.urdf  robot_montaj.csv  robot_montaj.urdf
src/kinect_arm_control/kinect_arm_control/: robot_brain.py
src/kinect_arm_control/launch/: debug_brain.launch.py  manual_control.launch.py  start_system.launch.py  system_bringup.launch.py
src/kinect_arm_control/scripts/: detector_color.py  detector_yolo.py  eye_node.py  eye_node_mobile.py  robot_brain.py  teleop_terminal.py
src/kinect_arm_control/src/: cpp_brain.cpp
src/my_custom_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_custom_arm_moveit_config/config/: custom_robot_arm_rect.ros2_control.xacro  custom_robot_arm_rect.srdf  custom_robot_arm_rect.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_montaj.ros2_control.xacro  robot_montaj.srdf  robot_montaj.urdf.xacro  ros2_controllers.yaml
src/my_custom_arm_moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_planning.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
